# Wardly

./: .gitignore  README.md
backend/: .env.example  .gitignore  ai_agent.py  data.json  item-pipeline.txt  item.json  main.py  pyproject.toml  wardrobe_image_processor.py
backend/app/: exceptions.py  main.py  prompts.py
backend/app/api/: items.py  suggestions.py
backend/app/models/: classification.py  clothing_analysis.py  outfit.py  outfit_suggestions.py  wardrobe_schema.py
backend/app/pipelines/: recommendation.py  upload_pipeline.py
backend/app/services/: cloudinary_client.py  fashion_clip.py  gemini_client.py  groq_client.py  mongo_client.py  rembg_service.py  segformer.py
backend/app/static/: index.html  items.html  outfits.html
backend/app/streaming/: config.py  streams.py
backend/core/: logging.py
backend/devolepment_data/: WardrobeItem.ts  item.json  mongodb_document.json
backend/enums/: clothing_item.py
backend/static/: outfits.html
